# OmniSight

./: .env.example  .gitignore  CLAUDE.md  README.md  设计文档.md
.claude/: settings.json  settings.local.json
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py
backend/app/agents/interview/: __init__.py  agent.py
backend/app/models/: interview.py  schemas.py  state.py
backend/app/routes/: ws.py
backend/app/services/: audio.py  bailian_http_client.py  bailian_ws_client.py  base_ai_client.py  conversation.py  document_parser.py  entity_extractor.py  frame_manager.py  interview_engine.py  interview_scorer.py  kokoro_tts.py  ollama_client.py  prompts.py  question_generator.py  sherpa_tts.py  transcriber.py  tts.py
backend/tests/: conftest.py  stress_test.py  test_audio.py  test_bailian_ws_client.py  test_document_parser.py  test_entity_extractor.py  test_interview_agent.py  test_interview_engine.py  test_interview_pipeline.py  test_interview_scorer.py  test_question_generator.py  test_ws.py
dev-logs/: 2026-06-12-pr2-ws-streaming.md  2026-06-12-pr3-local-ai-core.md  2026-06-12-project-setup.md  2026-06-13-pr4-tts-interrupt.md  2026-06-13-pr5-polish.md  2026-06-13-pr6-ui-polish.md  2026-06-13-pr7-kokoro-tts.md  2026-06-14-pr8-system-prompt.md  2026-06-14-pr9-frontend-ui-final.md  2026-06-22-pr10-ai-provider-abstraction.md  2026-06-23-pr11-agent-framework.md  2026-06-23-pr12-document-parser.md  2026-06-23-pr13-interview-agent-pre.md  2026-06-23-pr14-interview-during.md  2026-06-23-pr15-interview-post.md  INDEX.md  (+2 more)
(+72 files in other folders)
