[project]
name = "omnisight-backend"
version = "0.1.0"
description = "AI Visual Conversation Assistant - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.33,<0.34",
    "opencv-python>=4.10,<5",
    "pillow>=10.4,<11",
    "numpy>=1.26,<2",
    "pydantic>=2.10,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.28,<1",
    "faster-whisper>=1.0,<2",
    "torch>=2.4,<3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]
